--- a/biblio.bib
+++ b/biblio.bib
@@ -1,6 +1,9 @@
+Booktitle = {Proceedings of Nineteenth National AAAI Conference on Artificial Intelligence},
+Booktitle = {Proceedings of Nineteenth AAAI Conference on Artificial Intelligence},
+
 @inproceedings{Briel-et-al:AAAI04,
 	Author = {Briel, M. and Sanchez, R. and Do, M. and Kambhampati, S.},
-	Booktitle = {Proceedings of Nineteenth National Conference on Artificial Intelligence ({AAAI}04)},
+	Booktitle = {Proceedings of the AAAI Nineteenth National Conference on Artificial Intelligence},
 	Optpublisher = {AAAI Press},
 	Title = {Effective Approaches for Partial Satisfaction (Over-Subscription) Planning},
 	Year = {2004},
@@ -10,10 +13,27 @@
 
 @inproceedings{do-kambhampati04,
 	Author = {Do, M.B. and Kambhampati, S.},
-	Booktitle = {Proceedings of Fifth International Conference on Knowledge Based Computer Systems {(KBCS04)}},
+	Booktitle = {Proceedings of Fifth International Conference on Knowledge Based Computer Systems {(KBCS)}},
 	Title = {Partial Satisfaction (Over-Subscription) Planning as Heuristic Search},
 	Year = 2004,
 	pages={mancanti}}
+
+
+@inproceedings{Weld:94AA,
+	Address = {Seattle, WA},
+	Author = {Weld, D. and Etzioni, O.},
+	Booktitle = {In Proceedings of the AAAI Twelfth National Conference on Artificial Intelligence},
+	Pages = {1042-1047},
+	Title = {The First Law of Robotics (A Call to Arms)},
+	Year = 1994}
+
+
+@inproceedings{I04,
+	Author = {Smith, D.},
+	Booktitle = {In Proceedings of the Fourteenth International Conference on Automated Planning and Scheduling {(ICAPS)}},
+	Optpages = {393--401},
+	Title = {Choosing Objectives in Over-Subscription Planning},
+	Year = 2004}
 
 
 @article{GHLS+09,
@@ -30,7 +50,7 @@
       title={Improving Plan Quality through Heuristics for Guiding and Pruning the Search: A Study Using {LAMA}},
       author={Percassi, F. and Gerevini, A. and Geffner, H.},
       year={2017},
-      booktitle={Proceedings of the Tenth International Symposium on Combinatorial Search (SoCS 2017)},
+      booktitle={Proceedings of the Tenth International Symposium on Combinatorial Search (SoCS)},
       Pages={144--148}
 }
 
@@ -38,7 +58,7 @@
 @inproceedings{coles2011lprpg,
   title={LPRPG-P: Relaxed Plan Heuristics for Planning with Preferences.},
   author={Coles, Amanda Jane and Coles, Andrew},
-  booktitle={Proceedings of the Twenty-First International Conference on Automated Planning and Scheduling (ICAPS 2011)},
+  booktitle={Proceedings of the Twenty-First International Conference on Automated Planning and Scheduling (ICAPS)},
   year={2011},
   pages={26-33}
 }
@@ -48,7 +68,7 @@
 	Author = {Wright B., Mattmüller R. and Nebel B..},
 	Title = {Compiling Away Soft Trajectory Constraints in Planning.},
 	Year = {2018},
-	booktitle={In Proceedings of the Sixteenth Conference on Principles of Knowledge Representation and Reasoning (KR18)}
+	booktitle={In Proceedings of the Sixteenth Conference on Principles of Knowledge Representation and Reasoning (KR)}
 	pages={474-482}
 	}
 
@@ -67,7 +87,7 @@
 
 @inproceedings{MercuryIPC8,
 	Author = {Katz, M. and Hoffmann, J.},
-	Booktitle = {In Eighth International Planning Competition Booklet (ICAPS 2014)},
+	Booktitle = {In Eighth International Planning Competition Booklet {(ICAPS)}},
 	Title = {Mercury Planner: Pushing the Limits of Partial Delete Relaxation},
 	Year = {2014},
 	pages ={43-47}}
@@ -76,7 +96,7 @@
 @inproceedings{nunez2014miplan,
       title={{MIPlan} and {DPMPlan}},
       author={N{\'u}nez, S. and Borrajo, D. and Linares L{\'o}pez, C.},
-      Booktitle = {In Eighth International Planning Competition Booklet (ICAPS 2014)},
+      Booktitle = {In Eighth International Planning Competition Booklet (ICAPS)},
       pages={13--16},
       year={2014}
 }
@@ -84,7 +104,7 @@
 @inproceedings{cenamor2014ibacop,
       title={{IB}A{C}O{P} and {IB}A{C}O{P} planner},
       author={Cenamor, I. and De La Rosa, T. and Fern{\'a}ndez, F.},
-      Booktitle = {In Eighth International Planning Competition Booklet (ICAPS 2014)},
+      Booktitle = {In Eighth International Planning Competition Booklet (ICAPS)},
       pages={35--38},
       year={2014}
 }
@@ -110,6 +130,6 @@
   title={Domain-independent construction of pattern database heuristics for cost-optimal planning},
   author={Haslum, P. and Botea, A. and Helmert, M. and Bonet, B. and Koenig, S. and others},
   year={2007},
-  Booktitle={In Proceedings of the Twenty-second AAAI Conference on Artificial Intelligence (AIII 2007), 
+  Booktitle={In Proceedings of the AAAI Twenty-second Conference on Artificial Intelligence, 
   pages={1007–1012}
 }
