--- a/biblio.bib
+++ b/biblio.bib
@@ -28,7 +28,17 @@ Booktitle = {Proceedings of Nineteenth AAAI Conference on Artificial Intelligenc
 	Year = 1994}
 
 
-@inproceedings{I04,
+@article{bacKab,
+	Author = {Bacchus, F. and Kabanza, F.},
+	Journal = {Annals of Mathematics and Artificial Intelligence},
+	Pages = {5--27},
+	Title = {Planning for Temporally Extended Goals},
+	Volume = {22(1-2)},
+	Year = {1998}}
+
+
+
+@inproceedings{smith04,
 	Author = {Smith, D.},
 	Booktitle = {In Proceedings of the Fourteenth International Conference on Automated Planning and Scheduling {(ICAPS)}},
 	Optpages = {393--401},
@@ -43,6 +53,25 @@ Booktitle = {Proceedings of Nineteenth AAAI Conference on Artificial Intelligenc
 	Pages = {619--668},
 	Title = {Deterministic Planning in the Fifth International Planning Competition: {PDDL3} and Experimental Evaluation of the Planners},
 	Volume = {173},
+	Year = {2009}}
+
+
+@article{Hplanp:aij09,
+	Author = {Baier, J. and Bacchus, F. and McIlraith, S.},
+	Date-Modified = {2015-03-05 18:29:40 +0000},
+	Journal = {Artificial Intelligence},
+	Pages = {593--618},
+	Title = {A Heuristic Search Approach to Planning with Temporally Extended Preferecens},
+	Volume = {173},
+	Year = {2009}}
+
+
+@article{kn:geffner09,
+	Author = {Emil Keyder and Hector Geffner},
+	Journal = {Journal of Artificial Intelligence Research (JAIR)},
+	Pages = {547-556},
+	Title = {Soft Goals Can Be Compiled Away},
+	Volume = {36},
 	Year = {2009}}
 
 
