--- a/biblio.bib
+++ b/biblio.bib
@@ -1,6 +1,3 @@
-Booktitle = {Proceedings of Nineteenth National AAAI Conference on Artificial Intelligence},
-Booktitle = {Proceedings of Nineteenth AAAI Conference on Artificial Intelligence},
-
 @inproceedings{Briel-et-al:AAAI04,
 	Author = {Briel, M. and Sanchez, R. and Do, M. and Kambhampati, S.},
 	Booktitle = {Proceedings of the AAAI Nineteenth National Conference on Artificial Intelligence},
@@ -28,7 +25,7 @@ Booktitle = {Proceedings of Nineteenth AAAI Conference on Artificial Intelligenc
 	Year = 1994}
 
 
-@inproceedings{I04,
+@inproceedings{smith04,
 	Author = {Smith, D.},
 	Booktitle = {In Proceedings of the Fourteenth International Conference on Automated Planning and Scheduling {(ICAPS)}},
 	Optpages = {393--401},
