--- a/biblio.bib
+++ b/biblio.bib
@@ -66,6 +66,16 @@ Booktitle = {Proceedings of Nineteenth AAAI Conference on Artificial Intelligenc
 	Year = {2009}}
 
 
+@inproceedings{BM:AAAI06,
+        title = {Planning with First-Order Temporally Extended Goals using Heuristic Search},
+        pages = {788--795},
+        booktitle = {Proceedings of the AAAI Twenty-First National Conference on Artificial Intelligence},
+        publisher = {{AAAI} Press},
+        author = {J. Baier and S. {McIlraith}},
+        year = {2006}
+}
+
+
 @article{kn:geffner09,
 	Author = {Emil Keyder and Hector Geffner},
 	Journal = {Journal of Artificial Intelligence Research (JAIR)},
