--- a/main.tex
+++ b/main.tex
@@ -1944,11 +1944,11 @@ plans even for the simplest instances.
 \begin{tabular}{|c||c|c||c|c||c|c||c|c||}
 \hline 
 \multirow{2}{*}{DOMINO} & \multicolumn{2}{c||}{$h^{\text{blind}}$} & \multicolumn{2}{c||}{$h^{\text{max}}$} & \multicolumn{2}{c||}{$h^{\text{m\&s}}$} & \multicolumn{2}{c||}{$h^{\text{cpdb}}$} \\ \cline{2-9}
-& Nebel& Our & Nebel & Our& Nebel& Our& Nebel & Our \\ \hline
+& WRB & Our & WRB & Our& WRB & Our& WRB & Our \\ \hline
 % Storage & --- &  --- &  --- &  --- &  --- &  --- &  --- &  --- \hline
 % Domain & $h^{\text{blind}}$ & $h^{\text{max}}$ & $h^{\text{m\&s}}$ & $h^{\text{cpdb}}$\\ \hline 
 Storage & 24.78 & 57.0 & 29.2 & 45.0 & 32.50 & 24.0 & 23.10 & 57.0 \\ \hline
-Rovers & 17.4 & 24.0 & 41.0 & 25.0 & 16.67 & 26.0 & 15.17 & 23.0 \\ \hline
+Rovers & 17.4 & 24.0 & 21.43 & 25.0 & 16.67 & 26.0 & 15.17 & 23.0 \\ \hline
 Trucks & 18.84 & 24.0 & 23.19 & 25.0 & n/a & 25.0 & n/a & 25 \\ \hline
 TPP & --- & 47.0 & --- & 45.0 & --- & 47.0 & -- & 40.0 \\ \hline
 
